@@ -75,6 +75,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation 'me.xdrop:fuzzywuzzy:1.3.1'
+
     //noinspection GradleDependency
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
